checked in back

--- a/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/src/gatsby-theme-chronoblog/site-header.mdx
@@ -1,7 +1,9 @@
 <MenuMain>
   <MenuBlock>
     <Link to="/">Home</Link>
-    <Link to="/projects">Projects</Link>
+    <Link to="/pubg">Pubg</Link>
+    <Link to="/dota">Dota</Link>
+    <Link to="/cod">Cod</Link>
   </MenuBlock>
   <MenuBlock>
     <SocialLinks />
